# iot_energy_meter

./: .env.example  .gitignore  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
accounts/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
core/: settings.py  urls.py
core/settings/: base.py  development.py  production.py
credits/: admin.py  models.py  urls.py  views.py
credits/migrations/: 0001_initial.py
docker/: Dockerfile  Dockerfile.dev
docker/mosquitto/: mosquitto.conf
docker/nginx/: nginx.conf
esp32_firmware/: README.md  esp32_firmware.ino
home/: urls.py  views.py
mqtt_service/: client.py  handlers.py
mqtt_service/management/commands/: mqtt_listener.py
scripts/: esp32_simulator.py  mqtt_monitor.sh  requirements.txt
stations/: admin.py  models.py  services.py  urls.py  views.py
stations/migrations/: 0001_initial.py
templates/: base.html  pzem_data.html
templates/accounts/: dashboard.html  login.html  profile.html  register.html
templates/admin/credits/: add_credit.html
templates/credits/: transaction_history.html
templates/stations/: session_detail.html  session_history.html  station_detail.html  station_list.html
terraform/: ec2.tf  main.tf  outputs.tf  security_groups.tf  terraform.tfvars.example  user_data.sh  variables.tf  vpc.tf
