[project]
name = "iot-energy-meter"
version = "0.1.0"
description = "IoT Energy Meter Charging Station System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0",
    "psycopg[binary]>=3.1",
    "gunicorn>=23.0",
    "paho-mqtt>=2.0",
    "python-dotenv>=1.0",
    "qrcode[pil]>=8.0",
    "whitenoise>=6.7",
    "dj-database-url>=2.2",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-django>=4.5",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings.development"
python_files = ["test_*.py", "*_test.py"]
